--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,43 @@
-p {
-  color: blue;
-  text-align: center;
-  font-size: 4em;
+.container {
+  position: relative;
+  width: 50%;
 }
-img {
+
+.image {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: #f8f8f8;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.container:hover .overlay {
+  bottom: 0;
+  height: 100%;
+}
+a
+{
+  color: black;
+  font-size: 20px;
+}
+.text {
+  white-space: nowrap;
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
