--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,16 @@ a
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
+.map-container{
+overflow:hidden;
+padding-bottom:56.25%;
+position:relative;
+height:0;
+}
+.map-container iframe{
+left:0;
+top:0;
+height:100%;
+width:100%;
+position:absolute;
+}
