--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,11 @@ height:100%;
 width:100%;
 position:absolute;
 }
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 150px;
+}
